--- a/01/index.html
+++ b/01/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
+        <script type="text/javascript" src="labo01.js"></script>
     </head>
     <body>
         <h1>Labo 01</h1>
