Labo01 : table to div

--- a/01/index.html
+++ b/01/index.html
@@ -5,6 +5,9 @@
         <script type="text/javascript" src="labo01.js"></script>
     </head>
     <body>
-        <h1>Labo 01</h1>
+        <h1 id="title"></h1>
+        <input type="button" value="Remplir le tableau" />
+
+        <div style="display:none;" />
     </body>
 </html>
