Ajout exercice-2.html

--- a/01/exercice-2.html
+++ b/01/exercice-2.html
@@ -2,12 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <script type="text/javascript" src="labo01.js"></script>
+        <script type="text/javascript" src="exercice2.js"></script>
     </head>
     <body>
-        <h1 id="title"></h1>
-        <input type="button" value="Remplir le tableau" />
-
-        <div style="display:none;" />
+        <div style="display:none;">Source actuel : <span id="source"></span></div>
+        <table /> 
     </body>
 </html>
